# multi_localizer

./: .gitignore  CMakeLists.txt  README.md  package.xml
mcl/: CMakeLists.txt  package.xml
mcl/config/params/20220224/: roomba1.yaml
mcl/config/params/20220630/: roomba1.yaml  roomba3.yaml
mcl/config/rviz/mcl/: roomba1.rviz  roomba4.rviz  roomba6.rviz
mcl/include/mcl/: mcl.h
mcl/include/mcl_base/: mcl_base.h
mcl/launch/: mcl.launch
mcl/mcl_base/: mcl_base.cpp  particle.cpp
mcl/src/: mcl.cpp  mcl_node.cpp
multi_localizer/: CMakeLists.txt  package.xml
multi_localizer/config/init_info/: 20220224.csv
multi_localizer/config/params/: object_params.yaml  robot_name_list.yaml
multi_localizer/config/params/single_mcl/: single_mcl.yaml
multi_localizer/config/rviz/: multi_localizer.rviz  multi_localizer_no_update.rviz
multi_localizer/config/rviz/amcl_pose_republisher/: roomba1.rviz  roomba2.rviz  roomba5.rviz
multi_localizer/config/rviz/mcl/: roomba2.rviz
multi_localizer/config/rviz/mr_localizer/: group_1.rviz
multi_localizer/config/rviz/multi_localizer/: roomba1.rviz  roomba2.rviz  roomba3.rviz  roomba4.rviz  roomba5.rviz  roomba6.rviz
multi_localizer/config/rviz/object_localizer/: roomba1.rviz  roomba3.rviz  roomba4.rviz  roomba5.rviz  roomba6.rviz
multi_localizer/config/rviz/pr_localizer/: roomba6.rviz
multi_localizer/config/rviz/rviz/: image_connector.rviz
multi_localizer/config/rviz/single_mcl/: roomba1.rviz
multi_localizer/include/database/: database.h  object_param.h
multi_localizer/include/dynamic_mcl/: semi_dynamic_map_creator.h  semi_dynamic_objects.h
multi_localizer/include/mcl/: mcl.h
multi_localizer/include/mcl_base/: mcl_base.h
multi_localizer/include/multi_localizer/: multi_localizer.h
multi_localizer/include/object_localizer/: object_localizer.h
multi_localizer/include/pose_subscribers/: pose_subscribers.h  robot_element.h
multi_localizer/include/pr_localizer/: pr_localizer.h
multi_localizer/include/ros_utils/amcl_pose_republisher/: amcl_pose_republisher.h
multi_localizer/include/ros_utils/images_connector/: image_subscriber.h  images_connector.h
multi_localizer/include/ros_utils/object_map/: color.h  object.h  object_map.h  object_param.h  objects.h
multi_localizer/include/ros_utils/pose_subscribers/: pose_subscriber.h  pose_subscribers.h  robot_element.h
multi_localizer/include/ros_utils/recorder/: record_observation.h  record_pose.h  record_trajectory.h  recorder.h
multi_localizer/include/single_mcl/: single_mcl.h
multi_localizer/launch/: mono_multi_localizer.launch  multi_localizer.launch  multi_localizer_no_update.launch  multi_localizer_node.launch  sampler.launch
multi_localizer/launch/mcl/: mcl.launch
multi_localizer/launch/object_localizer/: object_localizer.launch  object_localizer_2_pair.launch  single_object_localizer.launch
multi_localizer/launch/pr_localizer/: pr_localizer.launch
multi_localizer/launch/rr_localizer/: group_1.launch
multi_localizer/launch/semi_dynamic_map_creator/: semi_dynamic_map_creator.launch
multi_localizer/launch/utils/: 20220224.launch  bag_player.launch  bbox_msg_recorder.launch  equirectangular_convertor.launch  image_saver.launch  images_connector.launch  tf_broadcaster.launch
multi_localizer/mcl_base/: mcl_base.cpp  particle.cpp
multi_localizer/ros_utils/: amcl_pose_republisher.cpp  bbox_msg_recorder.cpp  image_saver.cpp  image_subscriber.cpp  recorder.cpp  sampler.cpp
multi_localizer/ros_utils/object_map/: color.cpp  object.cpp  object_map.cpp  object_param.cpp  objects.cpp
multi_localizer/ros_utils/pose_subscribers/: pose_subscriber.cpp  pose_subscribers.cpp  robot_element.cpp
multi_localizer/ros_utils/robot_name_list/: robot_name_list.cpp
multi_localizer/scripts/: data_viwer.py  data_viwer2.py
multi_localizer/src/: mcl.cpp  mcl_base.cpp  multi_localizer.cpp  multi_localizer_node.cpp  object_localizer.cpp  pr_localizer.cpp
multi_localizer/utils/: object.cpp  object_map.cpp  objects.cpp
multi_localizer_msgs/: CMakeLists.txt  package.xml
multi_localizer_msgs/msg/: ObjectData.msg  ObjectMap.msg  ObjectsData.msg  RobotPose.msg  SimpleObjectData.msg  SimpleObjectMap.msg
object_localizer/: CMakeLists.txt  README.md  package.xml
object_localizer/config/dynamic_objects/: dynamic_objects.yaml
object_localizer/config/init_objects/: 20220630.csv
object_localizer/config/object_params/: object_params.yaml
object_localizer/config/params/: object_localizer.yaml
object_localizer/config/rviz/: roomba2_object_localizer.rviz  roomba3_object_localizer.rviz  roomba4_object_localizer.rviz  roomba5_object_localizer.rviz  roomba6_object_localizer.rviz
object_localizer/include/database/: database.h  object.h  objects.h
object_localizer/include/dynamic_objects/: dynamic_objects.h
object_localizer/include/object_localizer/: mcl.h
object_localizer/include/object_params/: color.h  object_param.h
object_localizer/include/recorder/: recorder.h
object_localizer/launch/: object_localizer.launch  tf_broadcaster.launch
object_localizer/ros_utils/: color.cpp  dynamic_objects.cpp  object.cpp  object_map.cpp  object_param.cpp  objects.cpp
object_localizer/src/: mcl.cpp  mcl_node.cpp  particle.cpp  tf_broadcaster.cpp
place_recognition_localizer/: CMakeLists.txt  package.xml
place_recognition_localizer/include/place_recognition_localizer/: mcl.h
place_recognition_localizer/launch/: place_recognition_localizer.launch
place_recognition_localizer/src/: mcl.cpp  mcl_node.cpp  particle.cpp
relative_recognition_localizer/: CMakeLists.txt  package.xml
relative_recognition_localizer/include/pose_subscribers/: pose_subscriber.h  pose_subscribers.h  robot_element.h
relative_recognition_localizer/include/relative_recognition_localizer/: mcl.h
relative_recognition_localizer/launch/: group_1.launch  group_2.launch  group_3.launch  relative_recognition_localizer.launch
relative_recognition_localizer/ros_utils/: pose_subscriber.cpp  pose_subscribers.cpp  robot_element.cpp
relative_recognition_localizer/src/: mcl.cpp  mcl_node.cpp  particle.cpp
(+170 files in other folders)
