<?xml version="1.0"?>
<package format="2">
  <name>place_recognition_localizer</name>
  <version>0.0.0</version>
  <description>The place_recognition_localizer package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>multi_localizer_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>place_recognition_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
  </export>
</package>
