<?xml version="1.0"?>
<package format="2">
  <name>relative_recognition_localizer</name>
  <version>0.0.0</version>
  <description>The relative_recognition_localizer package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>multi_localizer_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>object_color_detector_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
  </export>
</package>
